Improved workflow structure

--- a/info.plist
+++ b/info.plist
@@ -69,7 +69,7 @@
 				<key>escaping</key>
 				<integer>0</integer>
 				<key>keyword</key>
-				<string>rexcapee</string>
+				<string>rexcape</string>
 				<key>script</key>
 				<string>QUERY="{query}"
 
